--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -3,52 +3,52 @@
         <h2 class="projects__name grey-name">OUR BUSINESS RELAITED PROJECTS</h2>
         <svg class="airplane"></svg>
         <div class="projects__block">
-            <figure class="project__img">
-                <img src="img/svg/technical_aid.svg" alt="TECHNICAL AID">
+            <figure>
+                <img class="projects__img" src="img/svg/technical_aid.svg" alt="TECHNICAL AID">
                 <figcaption>
-                    <a class="project__link">TECHNICAL AID</a>
+                    <a href="#" class="projects__link">TECHNICAL AID</a>
                 </figcaption>
             </figure>
-            <figure class="project__img">
-                <img src="img/svg/secure_access.svg" alt="SECURE ACCES">
+            <figure>
+                <img class="projects__img" src="img/svg/secure_access.svg" alt="SECURE ACCES">
                 <figcaption>
-                    <a class="project__link">SECURE ACCES</a>
+                    <a href="#" class="projects__link">SECURE ACCES</a>
                 </figcaption>
             </figure>
-            <figure class="project__img">
-                <img src="img/svg/market_research.svg" alt="MARKET RESEARCH">
+            <figure>
+                <img class="projects__img" src="img/svg/market_research.svg" alt="MARKET RESEARCH">
                 <figcaption>
-                    <a class="project__link">MARKET RESEARCH</a>
+                    <a href="#" class="projects__link">MARKET RESEARCH</a>
                 </figcaption>
             </figure>
-            <figure class="project__img">
-                <img src="img/svg/credit.svg" alt="CREDIT">
+            <figure>
+                <img class="projects__img" src="img/svg/credit.svg" alt="CREDIT">
                 <figcaption>
-                    <a class="project__link">CREDIT</a>
+                    <a href="#" class="projects__link">CREDIT</a>
                 </figcaption>
             </figure>
-            <figure class="project__img">
-                <img src="img/svg/targetting.svg" alt="TARGETING">
+            <figure>
+                <img class="projects__img" src="img/svg/targetting.svg" alt="TARGETING">
                 <figcaption>
-                    <a class="project__link">TARGETING</a>
+                    <a href="#" class="projects__link">TARGETING</a>
                 </figcaption>
             </figure>
-            <figure class="project__img">
-                <img src="img/svg/insurance.svg" alt="INSURANCE">
+            <figure>
+                <img class="projects__img" src="img/svg/insurance.svg" alt="INSURANCE">
                 <figcaption>
-                    <a class="project__link">INSURANCE</a>
+                    <a href="#" class="projects__link">INSURANCE</a>
                 </figcaption>
             </figure>
-            <figure class="project__img">
-                <img src="img/svg/ecommerce.svg" alt="ECOMERSE">
+            <figure>
+                <img class="projects__img" src="img/svg/ecommerce.svg" alt="ECOMERSE">
                 <figcaption>
-                    <a class="project__link">ECOMERSE</a>
+                    <a href="#" class="projects__link">ECOMERSE</a>
                 </figcaption>
             </figure>
-            <figure class="project__img">
-                <img src="img/svg/office.svg" alt="OFFICE">
+            <figure>
+                <img class="projects__img" src="img/svg/office.svg" alt="OFFICE">
                 <figcaption>
-                    <a class="project__link">OFFICE</a>
+                    <a href="#" class="projects__link">OFFICE</a>
                 </figcaption>
             </figure>
         </div>
