--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -19,7 +19,7 @@
                 lacus augue, volutpat quis porttitor a, placerat in lacus.
             </p>
 
-            <a href="#" class="yellow-btn history__button">browse out story</a>
+            <a href="#" class="yellow-btn history__button">browse our story</a>
         </div>
 
     </div>
