back to img from sprite idea

--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -4,7 +4,7 @@
         <svg class="airplane"></svg>
         <div class="projects__block">
             <figure>
-                <img class="projects__img" src="img/svg/proj1.svg" viewBox="0 0 50 50" height="50" width="50" alt="TECHNICAL AID">
+                <img class="projects__img" src="img/svg/technical_aid.svg" alt="TECHNICAL AID">
                 <figcaption>
                     <a href="#" class="projects__link">TECHNICAL AID</a>
                 </figcaption>
