--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -6,16 +6,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext"
         rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/main.css">
     <title>Unique-tech</title>
 </head>
 
 <body>
 
-    {% block content %} {% endblock %}
-
-    {# <script src="js/main.js"></script> #}
+    {% block content %} {% endblock %} {#
+    <script src="js/main.js"></script> #}
 
 </body>
 
