--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,7 @@ $color-white: white;
 $color-mainYellow: #ffc038;
 $color-logoBorder: #fff200;
 $color-mainGrey: #464646;
+$color-process: #fcfcfc;
 $p-font-color: #363636;
 $grey-text:#6a6a6a;
 $h1-font-color: #fdfcfc;
