--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -22,6 +22,7 @@ section-name + section-name--mw220 или section-name--mw330 */
     white-space: nowrap;
     border-radius: 2px;
     padding: 13px 14px;
+    box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
     &--mw330 {
         min-width: 330px;
         padding: 13px 23px;
