--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="container">
+    <div class="container container--footer">
         <div class="footer-inner">
             <nav class="footer-inner__menu">
                 <ul class="footer-inner__list">
