--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -5,49 +5,49 @@
         <div class="projects__block">
             <figure>
                 <img class="projects__img" src="img/svg/technical_aid.svg" alt="TECHNICAL AID">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">TECHNICAL AID</a>
                 </figcaption>
             </figure>
             <figure>
                 <img class="projects__img" src="img/svg/secure_access.svg" alt="SECURE ACCES">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">SECURE ACCES</a>
                 </figcaption>
             </figure>
             <figure>
                 <img class="projects__img" src="img/svg/market_research.svg" alt="MARKET RESEARCH">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">MARKET RESEARCH</a>
                 </figcaption>
             </figure>
             <figure>
                 <img class="projects__img" src="img/svg/credit.svg" alt="CREDIT">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">CREDIT</a>
                 </figcaption>
             </figure>
             <figure>
                 <img class="projects__img" src="img/svg/targetting.svg" alt="TARGETING">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">TARGETING</a>
                 </figcaption>
             </figure>
             <figure>
                 <img class="projects__img" src="img/svg/insurance.svg" alt="INSURANCE">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">INSURANCE</a>
                 </figcaption>
             </figure>
             <figure>
                 <img class="projects__img" src="img/svg/ecommerce.svg" alt="ECOMERSE">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">ECOMERSE</a>
                 </figcaption>
             </figure>
             <figure>
                 <img class="projects__img" src="img/svg/office.svg" alt="OFFICE">
-                <figcaption>
+                <figcaption class="projects__caption">
                     <a href="#" class="projects__link">OFFICE</a>
                 </figcaption>
             </figure>
