--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -44,18 +44,18 @@
     //height: 100px;
     margin: 1em;
     transition: background-color 1s ease;
-    img {
-      width: 35px;
-      height: 23px;
-      //fill: #000099;
-    }
     &:hover {
       background-color: $color-mainYellow;
-    img{
+    .features__img{
       filter: invert(1);
     }
 
     }
+  }
+  &__img {
+    width: 35px;
+    height: 23px;
+    //fill: #000099;
   }
 
 
