--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'container';
 @import 'header';
 @import 'welcome';
+@import 'services';
 @import 'support';
 @import 'projects';
 @import 'team';
