--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -1,7 +1,8 @@
 <section class="services">
-    <div class="container">
+    <div class="container services__container">
         <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
         <div class="services__block">
+            <img class="services__image" src="img/png/macbook_1.png">
             <article class="services__content">
                 <h3>search engine optimization</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione
