--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -13,7 +13,7 @@
         font-weight: $font-weight-700;
         color: $grey-text;
         text-decoration: none;
-        margin: 40px auto
+        margin: 40px auto;
     }
     &__caption {
         margin: 40px auto;
