--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -35,16 +35,28 @@
             <div class="footer-inner__social">
                 <div class="social">
                     <div class="social__block">
-                        <a href="#"><img class="social__icon" src="img/svg/icons/fb.svg"></a>
+                        <a href="#">
+                            <!-- <img class="social__icon" src="img/svg/icons/fb.svg"> -->
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
                     </div>
                     <div class="social__block">
-                        <a href="#"><img class="social__icon" src="img/svg/icons/tw.svg"></a>
+                        <a href="#">
+                            <!-- <img class="social__icon" src="img/svg/icons/tw.svg"> -->
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </div>
                     <div class="social__block">
-                        <a href="#"><img class="social__icon" src="img/svg/icons/g-plus.svg"></a>
+                        <a href="#">
+                            <!-- <img class="social__icon" src="img/svg/icons/g-plus.svg"> -->
+                            <i class="fab fa-google-plus-g"></i>
+                        </a>
                     </div>
                     <div class="social__block">
-                        <a href="#"><img class="social__icon" src="img/svg/icons/lin.svg"></a>
+                        <a href="#">
+                            <!-- <img class="social__icon" src="img/svg/icons/lin.svg"> -->
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
                     </div>
                 </div>
                 <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
