remove unnecessary div's

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,60 +1,61 @@
-    .footer {
-        width: 100vw;
-        background-color: $p-font-color;
-        &-inner {
-            width: 100%;
-            color: #aab2bd;
-            &__list {
-                list-style: none;
-            }
-            &__menu {
-                display: flex;
-                justify-content: space-between;
-            }
-            &__social {
-                text-align: center;
-                padding-bottom: 33px;
-            }
+@import 'variables';
+.footer {
+    width: 100vw;
+    background-color: $p-font-color;
+    &-inner {
+        width: 100%;
+        color: #aab2bd;
+        &__list {
+            list-style: none;
+        }
+        &__menu {
+            display: flex;
+            justify-content: space-between;
+        }
+        &__social {
+            text-align: center;
+            padding-bottom: 33px;
         }
     }
+}
 
-    .menu {
-        &__h3 {
-            font-size: $h3-font-size;
-            font-weight: 500;
-            color: #e6e9ed;
-            // padding: 43px 0 28px 0;
-            padding-bottom: 28px;
-        }
-        &__link {
-            text-decoration: none;
-            color: #aab2bd;
-            line-height: 2;
-            &:hover {
-                color: $color-white;
-            }
-        }
+.menu {
+    &__h3 {
+        font-size: $h3-font-size;
+        font-weight: 500;
+        color: #e6e9ed; // padding: 43px 0 28px 0;
+        padding-bottom: 28px;
     }
-
-    .social {
-        margin: 40px auto 20px auto;
-        &__block {
-            width: 40px;
-            height: 40px;
-            background-color: $color-mainYellow;
-            margin-right: 1px;
-            display: inline-block;
+    &__link {
+        text-decoration: none;
+        color: #aab2bd;
+        line-height: 2;
+        &:hover {
             color: $color-white;
-            border-radius: 2px;
-            position: relative;
-            &:hover {
-                transform: scale(1.2);
-            }
-        }
-        &__icon {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
         }
     }
+}
+
+.social {
+    margin: 40px auto 20px auto;
+    &__block {
+        width: 40px;
+        height: 40px;
+        background-color: $color-mainYellow;
+        margin-right: 1px;
+        display: inline-block;
+        color: $color-white;
+        border-radius: 2px;
+        position: relative;
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+    &__icon {
+        color: $color-white;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
