--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -34,30 +34,30 @@
 
             <div class="footer-inner__social">
                 <div class="social">
-                    <div class="social__block">
-                        <a href="#">
+                    <!-- <div class="social__block"> -->
+                        <a class="social__block" href="#">
                             <!-- <img class="social__icon" src="img/svg/icons/fb.svg"> -->
-                            <i class="fab fa-facebook-f"></i>
+                            <i class="social__icon fab fa-facebook-f"></i>
                         </a>
-                    </div>
-                    <div class="social__block">
-                        <a href="#">
+                    <!-- </div> -->
+                    <!-- <div class="social__block"> -->
+                        <a class="social__block" href="#">
                             <!-- <img class="social__icon" src="img/svg/icons/tw.svg"> -->
-                            <i class="fab fa-twitter"></i>
+                            <i class="social__icon fab fa-twitter"></i>
                         </a>
-                    </div>
-                    <div class="social__block">
-                        <a href="#">
+                    <!-- </div> -->
+                    <!-- <div class="social__block"> -->
+                        <a class="social__block" href="#">
                             <!-- <img class="social__icon" src="img/svg/icons/g-plus.svg"> -->
-                            <i class="fab fa-google-plus-g"></i>
+                            <i class="social__icon fab fa-google-plus-g"></i>
                         </a>
-                    </div>
-                    <div class="social__block">
-                        <a href="#">
+                    <!-- </div> -->
+                    <!-- <div class="social__block"> -->
+                        <a class="social__block" href="#">
                             <!-- <img class="social__icon" src="img/svg/icons/lin.svg"> -->
-                            <i class="fab fa-linkedin-in"></i>
+                            <i class="social__icon fab fa-linkedin-in"></i>
                         </a>
-                    </div>
+                    <!-- </div> -->
                 </div>
                 <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
             </div>
