--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,8 +9,8 @@ $p-font-weight: 300;
 $h1-font-weight: $font-weight-700;
 $h2-font-weight: $font-weight-700;
 $h3-font-weight: 400;
-$color-black: black;
-$color-white: white;
+$color-black: #000;
+$color-white: #fff;
 $color-mainYellow: #ffc038;
 $color-logoBorder: #fff200;
 $color-mainGrey: #464646;
