paddings and margins fixes

--- a/src/scss/_container.scss
+++ b/src/scss/_container.scss
@@ -10,3 +10,11 @@
         padding-top: 47px;
     }
 }
+
+.screen-width {
+    width: 100vw;
+}
+
+.brand-yellow {
+    background-color: $color-mainYellow;
+}
