--- a/src/scss/_hire.scss
+++ b/src/scss/_hire.scss
@@ -1,5 +1,6 @@
 .hire {
-    margin: 130px 0 90px 0;
+    // margin: 130px 0 90px 0;
+    padding-bottom: 130px;
     &__content {
         background-color: $color-mainYellow;
         color: $color-white;
