--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -90,6 +90,7 @@ section-name + section-name--mw220 или section-name--mw330 */
     white-space: nowrap;
     user-select: none;
     text-decoration: none;
+    text-transform: uppercase;
     border-radius: 2px;
     box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
     color: #3a3a3a;
@@ -97,6 +98,7 @@ section-name + section-name--mw220 или section-name--mw330 */
     font-size: 12px;
     font-weight: $font-weight-700;
     font-family: $buttons-font-family;
+
     margin-top: 15px;
 }
 
