--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,7 @@ $color-black: black;
 $color-white: white;
 $color-mainYellow: #ffc038;
 $color-logoBorder: #fff200;
+$color-darkYellow:#efb415;
 $color-mainGrey: #464646;
 $p-font-color: #363636;
 $grey-text:#6a6a6a;
