--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,11 +4,12 @@
 @import 'container';
 @import 'header';
 @import 'welcome';
-@import 'support';
+@import 'features';
+@import 'packages';
+@import 'history';
 @import 'projects';
 @import 'team';
+@import 'support';
 @import 'hire';
-@import 'features';
 @import 'footer';
 @import 'buttons';
-@import 'history';
