--- a/src/scss/_container.scss
+++ b/src/scss/_container.scss
@@ -2,7 +2,7 @@
 .container {
     max-width: 1004px;
     margin: 0 auto;
-    padding-top: 130px;
+    // padding-top: 130px;
     &--no-padding {
         padding: 0;
     }
