--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="history__right">
-            <h2 class="section-name section-name--mw220">OUR HISTORY</h2>
+            <h2 class="history__title--no-space section-name section-name--mw220">OUR HISTORY</h2>
             <p class="history__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae lacus justo. Ut ullamcorper
                 fermentum ex. Nullam mollis diam id orci volutpat malesuada. Duis quis interdum justo, ac ultricies
