--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -1,7 +1,7 @@
 <section class="projects">
     <div class="container">
-        <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELAITED PROJECTS</h2>
-        <svg class="airplane"></svg>
+        <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED PROJECTS</h2>
+        <!-- <svg class="airplane"></svg> -->
         <div class="projects__block">
             <figure>
                 <img class="projects__img" src="img/svg/technical_aid.svg" alt="TECHNICAL AID">
