--- a/src/templates/partials/_support.html
+++ b/src/templates/partials/_support.html
@@ -1,7 +1,7 @@
 <section class="support">
     <div class="container">
         <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">UPDATES & SUPPORT</h2>
-        <svg class="airplane"></svg>
+        <!-- <svg class="airplane"></svg> -->
         <div class="suppport__inner">
             <img class="support__img" src="img/png/macbook1.png">
             <article class="support__text">
