--- a/src/scss/_hire.scss
+++ b/src/scss/_hire.scss
@@ -1,5 +1,6 @@
 .hire {
     // margin: 130px 0 90px 0;
+    padding-top: 130px;
     padding-bottom: 130px;
     &__content {
         background-color: $color-mainYellow;
@@ -10,6 +11,9 @@
     }
     &__h3 {
         font-size: 22px;
+    }
+    &__img {
+        width: 100%;
     }
     &__button {
         float: right;
