--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,14 +9,17 @@ $p-font-weight: 300;
 $h1-font-weight: $font-weight-700;
 $h2-font-weight: $font-weight-700;
 $h3-font-weight: 400;
+$h4-font-weight: 500;
 $color-black: black;
 $color-white: white;
+$color-red:#f26c4f;
 $color-mainYellow: #ffc038;
 $color-logoBorder: #fff200;
 $color-darkYellow:#efb415;
 $color-mainGrey: #464646;
 $p-font-color: #363636;
 $grey-text:#6a6a6a;
+$color-liteGrey: #a5a5a5;
 $lite-color:#f4f4f4;
 $h1-font-color: #fdfcfc;
 $h2-font-color: #ffffff;
