--- a/src/scss/_packages.scss
+++ b/src/scss/_packages.scss
@@ -1,33 +1,89 @@
-        .packages {
-            &__table {
-                padding: 20px;
-                width: 90%;
-                border-collapse: collapse;
-                border: 4px solid white;
-                margin: 0 auto;
-                td,
-                th {
-                    border: 2px solid $color-darkYellow;
+.packages {
+    &__table {
+        width: 80%;
+        border-collapse: collapse;
+        border: 4px solid white;
+        margin: 0 auto;
+        text-align: center;
+        font-family: $body-font-family;
+        font-size: $p-font-size;
+        font-weight: $h4-font-weight;
+        color: $color-liteGrey;
+    }
+    &__coll {
+        border: 2px solid $color-darkYellow;
+        &:hover,
+        &:nth-child(2) {
+            font-size: 18px;
+            color: $p-font-color;
+            .coll {
+                &__name {
+                    font-size: $h2-font-size;
                 }
-                td:FIRST-CHILD {
-                    font-weight: bold;
+                &__price {
+                    font-size: $h1-font-size;
                 }
-                /* make the last cell of every row italic */
-                td:LAST-CHILD {
-                    font-style: italic;
-                }
-                .col:hover .col1 {
-                    font-size: 18px;
-                    color: grey;
-                }
-                td:hover {
-                    font-size: 18px;
-                    color: grey;
+                &__btn {
+                    transform: scale(1.2);
                 }
             }
         }
-        
-        li {
-            display: block;
-            border-bottom: 2px solid $color-darkYellow;
+    }
+    &--grey {
+        color: $color-liteGrey;
+    }
+    &--red {
+        color: $color-red;
+    }
+    &--yellow {
+        color: $color-mainYellow;
+    }
+    &__order {
+        display: flex;
+        width: 80%;
+        margin: 0 auto;
+        justify-content: space-between;
+        margin-top: 50px;
+    }
+}
+
+.coll {
+    &__li {
+        display: block;
+        border-bottom: 2px solid $color-darkYellow;
+        padding: 15px 0;
+    }
+    &__price {
+        list-style: none;
+        font-size: 35px;
+        padding-top: 50px;
+    }
+    &__name {
+        font-size: 22px;
+        padding-bottom: 50px;
+    }
+    &__btn {
+        border-radius: 3px;
+        box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.1);
+        width: 192px;
+        height: 45px;
+        appearance: none;
+        color: $color-white;
+        border: 0;
+        white-space: nowrap;
+        user-select: none;
+        text-decoration: none;
+        &--grey {
+            background-color: $color-liteGrey;
         }
+        &--red {
+            background-color: $color-red;
+        }
+        &--yellow {
+            background-color: $color-mainYellow;
+        }
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+}
