--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -3,43 +3,45 @@
         <h2 class="section-name section-name--mw330  section-name--arrow-l">OUR PACKAGES</h2>
         <svg class="airplane"></svg>
         <table class="packages__table">
-            <col1 />
-            <col />
-            <col />
             <tr>
-                <td class="col1">
+                <td class="packages__coll">
                     <ul>
+                        <h4 class="coll__name packages--grey">BASIC</h4>
+                        <li class="coll__li">5 web sites</li>
+                        <li class="coll__li">15 e-mails</li>
+                        <li class="coll__li">5 MySql databases</li>
+                        <li class="coll__li">10 Gb storage</li>
+                        <li class="coll__price packages--grey">$5/mo.</li>
+                    </ul>
+                </td>
+                <td class="packages__coll">
+                    <ul>
+                        <h4 class="coll__name packages--red">STANDART</h4>
+                        <li class="coll__li">15 web sites</li>
+                        <li class="coll__li">40 e-mails</li>
+                        <li class="coll__li">20 MySql databases</li>
+                        <li class="coll__li">50 Gb storage</li>
+                        <li class="coll__price packages--red">$12/mo.</li>
 
-                        <li>>Web Design</li>
-                        <li>>Branding & Idefinity</li>
-                        <li>sign</li>
-                        <li>dghgnhd</li>
-                        <li><a class="menu__link" href="#">User Interfase</a></li>
                     </ul>
                 </td>
-                <td class="col2">
-                    <ul class="footer-inner__list">
-                        <h3 class="menu__h3">PORTFOLIO</h3>
-                        <li><a class="menu__link" href="#">Web Design</a></li>
-                        <li><a class="menu__link" href="#">Branding & Idefinity</a></li>
-                        <li><a class="menu__link" href="#">Mobile Design</a></li>
-                        <li><a class="menu__link" href="#">Print</a></li>
-                        <li><a class="menu__link" href="#">User Interfase</a></li>
-                    </ul>
-                </td>
-                <td class="col3">
-                    <ul class="footer-inner__list">
-                        <h3 class="menu__h3">PORTFOLIO</h3>
-                        <li><a class="menu__link" href="#">Web Design</a></li>
-                        <li><a class="menu__link" href="#">Branding & Idefinity</a></li>
-                        <li><a class="menu__link" href="#">Mobile Design</a></li>
-                        <li><a class="menu__link" href="#">Print</a></li>
-                        <li><a class="menu__link" href="#">User Interfase</a></li>
+                <td class="packages__coll">
+                    <ul>
+                        <h4 class="coll__name packages--yellow">PREMIUM</h4>
+                        <li class="coll__li">30 web sites</li>
+                        <li class="coll__li">50 e-mails</li>
+                        <li class="coll__li">40 MySql databases</li>
+                        <li class="coll__li">100 Gb storage</li>
+                        <li class="coll__price packages--yellow">$19/mo.</li>
+
                     </ul>
                 </td>
             </tr>
-
         </table>
-        <button>name</button>
+        <div class="packages__order">
+            <button class="coll__btn coll__btn--grey">ORDER NOW</button>
+            <button class="coll__btn coll__btn--red" form="">ORDER NOW</button>
+            <button class="coll__btn coll__btn--yellow" formaction="">ORDER NOW</button>
+        </div>
     </div>
 </section>
