--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -12,6 +12,7 @@
                         <li class="coll__li">5 MySql databases</li>
                         <li class="coll__li">10 Gb storage</li>
                         <li class="coll__price packages--grey">$5/mo.</li>
+                        <button class="coll__btn coll__btn--grey">ORDER NOW</button>
                     </ul>
                 </td>
                 <td class="packages__coll">
@@ -22,7 +23,7 @@
                         <li class="coll__li">20 MySql databases</li>
                         <li class="coll__li">50 Gb storage</li>
                         <li class="coll__price packages--red">$12/mo.</li>
-
+                        <button class="coll__btn coll__btn--red" form="">ORDER NOW</button>
                     </ul>
                 </td>
                 <td class="packages__coll">
@@ -33,15 +34,16 @@
                         <li class="coll__li">40 MySql databases</li>
                         <li class="coll__li">100 Gb storage</li>
                         <li class="coll__price packages--yellow">$19/mo.</li>
-
+                        <button class="coll__btn coll__btn--yellow" formaction="">ORDER NOW</button>
                     </ul>
                 </td>
             </tr>
         </table>
-        <div class="packages__order">
-            <button class="coll__btn coll__btn--grey">ORDER NOW</button>
-            <button class="coll__btn coll__btn--red" form="">ORDER NOW</button>
-            <button class="coll__btn coll__btn--yellow" formaction="">ORDER NOW</button>
+        <!--  <div class="packages__order ">
+            <button class="coll__btn coll__btn--grey ">ORDER NOW</button>
+            <button class="coll__btn coll__btn--red " form=" ">ORDER NOW</button>
+            <button class="coll__btn coll__btn--yellow " formaction=" ">ORDER NOW</button>
         </div>
+    -->
     </div>
 </section>
